Button style change

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 
                 <center class="bottem-buttons">
-                    <button class="base-style standard-style big-style " type="button" onclick="showPart(1)"> Summary
+                    <button class="base-style white-style big-style " type="button" onclick="showPart(1)"> Summary
                     </button>
                     <button class="base-style standard-style big-style " type="button"
                         onclick="downloadYAMLFile('Administrative')"> Download
@@ -478,7 +478,7 @@
 
 
                 <center class="bottem-buttons">
-                    <button class="base-style standard-style big-style " type="button" onclick="showPart(1)"> Summary
+                    <button class="base-style white-style big-style " type="button" onclick="showPart(1)"> Summary
                     </button>
                     <button class="base-style standard-style big-style " type="button"
                         onclick="downloadYAMLFile('Structural')"> Download
@@ -634,7 +634,7 @@
 
 
                 <center class="bottem-buttons">
-                    <button class="base-style standard-style big-style " type="button" onclick="showPart(1)"> Summary
+                    <button class="base-style white-style big-style " type="button" onclick="showPart(1)"> Summary
                     </button>
                     <button class="base-style standard-style big-style " type="button"
                         onclick="downloadYAMLFile('Descriptive')"> Download
