Added new fields
Added the new fields from the new example file

--- a/index.html
+++ b/index.html
@@ -123,6 +123,17 @@
                     </div>
 
                     <div class="question">
+                        <label class="question-label" for="web_address">
+                            Web Adress
+                            <span class="question-mark"
+                                title="A web address to download the data if applicable.">
+                                &#x1F6C8;
+                            </span>
+                        </label><br>
+                        <input class="text-input-field" type="text" id="web_address">
+                    </div>
+
+                    <div class="question">
                         <label class="question-label" for="producer_of_data">
                             Producer of Data *
                             <span class="question-mark" title="Which entity produced this dataset.">
@@ -130,6 +141,17 @@
                             </span>
                         </label><br>
                         <input class="text-input-field required-question" type="text" id="producer_of_data">
+                    </div>
+
+                    <div class="question">
+                        <label class="question-label" for="DOI">
+                            DOI
+                            <span class="question-mark"
+                                title="Data set DOI if applicable.">
+                                &#x1F6C8;
+                            </span>
+                        </label><br>
+                        <input class="text-input-field" type="text" id="DOI">
                     </div>
 
                     <div class="question">
