--- a/index.html
+++ b/index.html
@@ -264,11 +264,7 @@
                 </div>
                 <center class="bottem-buttons">
                     <button class="base-style standard-style big-style " type="button" onclick="showPart(2)">
-                        Administrative</button>
-                    <button class="base-style standard-style big-style " type="button" onclick="showPart(3)">
-                        Structural</button>
-                    <button class="base-style standard-style big-style " type="button" onclick="showPart(4)">
-                        Descriptive</button>
+                        Next</button>
                 </center>
             </div>
 
@@ -397,13 +393,10 @@
 
 
                 <center class="bottem-buttons">
-                    <button class="base-style white-style big-style " type="button" onclick="showPart(1)"> Summary
+                    <button class="base-style white-style big-style " type="button" onclick="showPart(1)"> Previous
                     </button>
                     <button class="base-style standard-style big-style " type="button"
-                        onclick="downloadYAMLFile('Administrative')"> Download
-                    </button>
-                    <button class="base-style standard-style big-style " type="button"
-                        onclick="uploadYAMLFile('Administrative')"> Upload
+                        onclick="showPart(3)"> Next
                     </button>
                 </center>
             </div>
@@ -510,13 +503,10 @@
 
 
                 <center class="bottem-buttons">
-                    <button class="base-style white-style big-style " type="button" onclick="showPart(1)"> Summary
+                    <button class="base-style white-style big-style " type="button" onclick="showPart(2)"> Previous
                     </button>
                     <button class="base-style standard-style big-style " type="button"
-                        onclick="downloadYAMLFile('Structural')"> Download
-                    </button>
-                    <button class="base-style standard-style big-style " type="button"
-                        onclick="uploadYAMLFile('Structural')"> Upload
+                        onclick="showPart(4)"> Next
                     </button>
                 </center>
             </div>
@@ -674,13 +664,13 @@
 
 
                 <center class="bottem-buttons">
-                    <button class="base-style white-style big-style " type="button" onclick="showPart(1)"> Summary
+                    <button class="base-style white-style big-style " type="button" onclick="showPart(3)"> Previous
                     </button>
                     <button class="base-style standard-style big-style " type="button"
-                        onclick="downloadYAMLFile('Descriptive')"> Download
+                        onclick="downloadYAMLFile()"> Download
                     </button>
                     <button class="base-style standard-style big-style " type="button"
-                        onclick="uploadYAMLFile('Descriptive')"> Upload
+                        onclick="uploadYAMLFile()"> Upload
                     </button>
                 </center>
 
