--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <label class="question-label" for="data_area">
                             Data Area *
                             <span class="question-mark"
-                                title="Which are the data are from. Can be an exact coordinate, a polygon, a town name, a country name, etc. If providing coordinates/polygons, it must be encoded as WKT with an SRID of 4326.">
+                                title="Which area the data are from. Can be an exact coordinate, a polygon, a town name, a country name, etc. If providing coordinates/polygons, it must be encoded as WKT with an SRID of 4326.">
                                 &#x1F6C8;
                             </span>
                         </label><br>
