--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<!--     <br><br>
+    <br><br>
 
 
     <div class="form-container">
@@ -679,10 +679,10 @@
     <script src="https://cdn.jsdelivr.net/npm/js-yaml/dist/js-yaml.min.js"></script>
     <script src="scripts/form.js"></script>
     <script src="scripts/generate.js"></script>
-    <script src="scripts/updownload.js"></script> -->
-    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; font-size: 24px; font-weight: bold;">
+    <script src="scripts/updownload.js"></script>
+<!--     <div style="display: flex; justify-content: center; align-items: center; height: 100vh; font-size: 24px; font-weight: bold;">
         Under Construction
-    </div>
+    </div> -->
     
 </body>
 
